# LidarRoomTracking

./: .envrc  flake.nix  notes.txt  pyproject.toml
.direnv/: flake-profile-6547e27f25ad62cd5b2a9b73736e475bcfaed77a  flake-profile-6547e27f25ad62cd5b2a9b73736e475bcfaed77a.rc
.direnv/flake-inputs/: 20qggidkg9sxgwcblxr7my954svk543y-source  902bx35jwbskm4ylkp9zchnvrw5nvk7d-source  brgvmd1vb51bd5973ym84qj6zxd7rza7-source  gmfhx8m3bszyp60ywxbd2gi56zadv3kb-source  h8pq19d5zyw2ih169pzjfvvk4db2g5r0-source  jv5rs7mrlhkphzfkjpk6jlddi2g1nm46-source  ldh3yii5klasrvprjapvljics54razfh-source  p9pbggajq6ykf2jdgsl33rw081mj68z4-source  rajc6cky39hpk3a3fmbmd4qlbap5ij3r-source  rk00mfikafn18rl3d17xvcc1kzn311mw-source  vjc4kpgljww86b5c74ky06wglx86dzmz-source  wnzzciv1g67vy7skjmajp2h4j2ivj7l3-source  z5r8imp4q5wjfl58d064rwm20cym02c0-source
lidarroomtracking/lidar/: __init__.py  lidarbase.py  rplidar.py
lidarroomtracking/mapping/: mapping_techniques.py
lidarroomtracking/positioning/: __init__.py  manual.py  positioningbase.py
nix/repo/: configs.nix  shells.nix
